# infinity-loop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/scripts/: changelog.mjs
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: SessionStore.ts  api.ts  devTypes.ts  snack.ts  types.ts
src/lib/components/: BounceCards.svelte  DevFileNode.svelte  DevFolderNode.svelte  DevModeCanvas.svelte  DevToolbar.svelte  GraphGallery.svelte  IgnoreModal.svelte  LayoutPicker.svelte  LocaleSwitcher.svelte  MainNode.svelte  ModeSwitcher.svelte  PdfAiPromptModal.svelte  PdfSplitModal.svelte  SettingsModal.svelte  Snackbar.svelte  TitleBar.svelte
src/lib/i18n/: en.ts  index.ts  ru.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/_dev/: DevFace.svelte
src/routes/_seek/: LandingOld.svelte  SeekFace.svelte  SeekGraph.svelte  SeekLanding.svelte
src/routes/_shared/: appState.svelte.ts
